--- a/about.html
+++ b/about.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>hello</title>
+    <title>Document</title>
   </head>
   <body>
-    <h1>heello laf xinc hao</h1>
-    <h2>sua lan 1</h2>
-    <h2>helloasdasdasd</h2>
+    <h1>heasdjasjkhdas</h1>
   </body>
 </html>
